--- a/styles.scss
+++ b/styles.scss
@@ -2,4 +2,5 @@
 @import 'scss/base/footer';
 
 @import 'scss/section/courusel';
-@import 'scss/section/theme'
+@import 'scss/section/theme';
+@import 'scss/section/roadmap';
