start to translate the page

--- a/scss/section/_roadmap.scss
+++ b/scss/section/_roadmap.scss
@@ -28,8 +28,14 @@
 .event-block{
     border-bottom: 1px solid #ebebeb;
     &__end{
-        border-bottom: 1px solid #404040;
+        border-bottom: 2px solid #404040;
     }
+}
+.event-block:hover{
+    border-bottom: 1px solid #23b000;
+}
+.event-block__end:hover{
+    border-bottom: 2px solid #23b000;
 }
 
 .event-name{
