Anchor cards is fixed

--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -9,6 +9,6 @@ header.nav-fixed {
 }
 
 .nav-active {
-    background-color: rgba($color: #fff, $alpha: 0.7)!important;
+    background-color: rgba($color: #afb3af, $alpha: 0.7)!important;
     
 }
