--- a/scss/section/_courusel.scss
+++ b/scss/section/_courusel.scss
@@ -3,3 +3,58 @@
     height: 80vh;
     background-color: black;
 }
+.card-image{
+    height: auto;
+    width: 100%;
+}
+
+.card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    a{
+        color: black;
+        text-decoration: none;
+    }
+    
+   
+}
+
+.card-main-text{
+    margin: 0;
+}
+
+.card-text{
+ display: block;       
+}
+
+.card-image{
+    border-radius: 2px;
+}
+
+.card-item{
+        display: block;
+        height: 400px;
+        width: 300px;
+        margin: 30px;
+        text-align: left;
+        hr{
+            display: inline-flex;
+            height: 1px;
+            background-color: black;
+            width: 10%;
+            margin: 0px;
+        }
+}
+.card-item:hover{
+    .card-image{
+        transform: scale(1.05);
+        transition: 1s;
+    }
+    hr{
+        width: 100%;
+        transition: 1s;
+    }
+    color: #505450;
+    transition: 1s;
+}
