--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,82 @@ header.nav-fixed {
 }
 
 .nav-active {
-  background-color: rgba(255, 255, 255, 0.7) !important;
+  background-color: rgba(175, 179, 175, 0.7) !important;
 }
 
 .place-holder {
   width: 100%;
   height: 80vh;
   background-color: black;
+}
+
+.card-image {
+  height: auto;
+  width: 100%;
+}
+
+.card-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.card-container a {
+  color: black;
+  text-decoration: none;
+}
+
+.card-main-text {
+  margin: 0;
+}
+
+.card-text {
+  display: block;
+}
+
+.card-image {
+  border-radius: 2px;
+}
+
+.card-item {
+  display: block;
+  height: 400px;
+  width: 300px;
+  margin: 30px;
+  text-align: left;
+}
+
+.card-item hr {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  height: 1px;
+  background-color: black;
+  width: 10%;
+  margin: 0px;
+}
+
+.card-item:hover {
+  color: #505450;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.card-item:hover .card-image {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.card-item:hover hr {
+  width: 100%;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .card-body img {
