--- a/scss/section/_roadmap.scss
+++ b/scss/section/_roadmap.scss
@@ -3,7 +3,7 @@
 }
 
 .date-block{
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     border-bottom: .1875rem solid #ffd617;
     display: inline-block;
     margin-right: .75rem;
@@ -15,7 +15,7 @@
 }
 .date-block:after{
     border-bottom: 1rem solid transparent;
-    border-right: 1rem solid #fff;
+    border-right: 1rem solid #f0f0f0;
     border-top: 1rem solid transparent;
     content: " ";
     position: absolute;
