--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #f0f0f0;
+}
+
 .m-bottom-0 {
   margin-bottom: 0 !important;
 }
@@ -109,7 +113,7 @@ header.nav-fixed {
 }
 
 .date-block {
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border-bottom: .1875rem solid #ffd617;
   display: inline-block;
   margin-right: .75rem;
@@ -122,7 +126,7 @@ header.nav-fixed {
 
 .date-block:after {
   border-bottom: 1rem solid transparent;
-  border-right: 1rem solid #fff;
+  border-right: 1rem solid #f0f0f0;
   border-top: 1rem solid transparent;
   content: " ";
   position: absolute;
