--- a/scss/section/_courusel.scss
+++ b/scss/section/_courusel.scss
@@ -10,8 +10,10 @@
 
 .card-container{
     display: flex;
+    gap: 30px;
+    justify-content: space-between;
     flex-wrap: wrap;
-    justify-content: space-around;
+    
     a{
         color: black;
         text-decoration: none;
@@ -36,7 +38,6 @@
         display: block;
         height: 400px;
         width: 300px;
-        margin: 30px;
         text-align: left;
         hr{
             display: inline-flex;
