--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ header.nav-fixed {
   background-color: rgba(175, 179, 175, 0.7) !important;
 }
 
+.person {
+  width: 40%;
+}
+
 .place-holder {
   width: 100%;
   height: 80vh;
@@ -32,10 +36,12 @@ header.nav-fixed {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 30px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
 }
 
 .card-container a {
@@ -59,7 +65,6 @@ header.nav-fixed {
   display: block;
   height: 400px;
   width: 300px;
-  margin: 30px;
   text-align: left;
 }
 
