--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@ header.nav-fixed {
   font-weight: 600;
 }
 
+.add-info {
+  background-color: #afb3af;
+}
+
 .place-holder {
   width: 100%;
   height: 80vh;
